--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,8 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-    {% block new_css %}{% endblock %}
+    {% block stylesheet %}<link rel="stylesheet" href="{% static 'style.css' %}">{% endblock %}
+
 </head>
 <body>
     {% block navbar %}{% endblock %}
@@ -87,7 +87,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{% static 'javascript.js' %}"></script>
-    {% block add_js %}{% endblock %}
+    {% block javascript %}<script src="{% static 'javascript.js' %}"></script>{% endblock %}
+
 </body>
 </html>
