--- a/staticfiles/static/style.css
+++ b/staticfiles/static/style.css
@@ -51,6 +51,20 @@
             margin: 0 0.2rem;
             transition: all 0.3s ease;
         }
+        .nav-link.active {
+    color: var(--accent-color) !important;
+    font-weight: 600;
+}
+
+.nav-link.active::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: var(--accent-color);
+}
 
         .nav-link:hover {
             color: var(--accent-color) !important;
