--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     {% load static %}
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    {% block stylesheet %}<link rel="stylesheet" href="{% static 'style.css' %}">{% endblock %}
-
+    {% block stylesheet %}
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+    {% endblock %}
 </head>
 <body>
     {% block navbar %}{% endblock %}
@@ -42,21 +43,27 @@
                     <span>LlamaEng</span>
                 </div>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <!-- Replace your current button with this one -->
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-expanded="false" aria-label="Toggle navigation">
+    <svg  class="svg_ham" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 48 48">
+<linearGradient id="C9TYDZarys49lHDy~k4THa_eofQ1g5BaAx6_gr1" x1="12.373" x2="34.611" y1="-154.373" y2="-176.611" gradientTransform="matrix(1 0 0 -1 0 -154)" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#0077d2"></stop><stop offset="1" stop-color="#0b59a2"></stop></linearGradient><path fill="url(#C9TYDZarys49lHDy~k4THa_eofQ1g5BaAx6_gr1)" d="M42,15H6c-1.65,0-3-1.35-3-3v0c0-1.65,1.35-3,3-3h36c1.65,0,3,1.35,3,3v0	C45,13.65,43.65,15,42,15z"></path><linearGradient id="C9TYDZarys49lHDy~k4THb_eofQ1g5BaAx6_gr2" x1="12.373" x2="34.611" y1="-166.373" y2="-188.611" gradientTransform="matrix(1 0 0 -1 0 -154)" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#0077d2"></stop><stop offset="1" stop-color="#0b59a2"></stop></linearGradient><path fill="url(#C9TYDZarys49lHDy~k4THb_eofQ1g5BaAx6_gr2)" d="M42,27H6c-1.65,0-3-1.35-3-3v0c0-1.65,1.35-3,3-3h36c1.65,0,3,1.35,3,3v0	C45,25.65,43.65,27,42,27z"></path><linearGradient id="C9TYDZarys49lHDy~k4THc_eofQ1g5BaAx6_gr3" x1="12.373" x2="34.611" y1="-178.373" y2="-200.611" gradientTransform="matrix(1 0 0 -1 0 -154)" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#0077d2"></stop><stop offset="1" stop-color="#0b59a2"></stop></linearGradient><path fill="url(#C9TYDZarys49lHDy~k4THc_eofQ1g5BaAx6_gr3)" d="M42,39H6c-1.65,0-3-1.35-3-3v0c0-1.65,1.35-3,3-3h36c1.65,0,3,1.35,3,3v0	C45,37.65,43.65,39,42,39z"></path>
+</svg>
+</button>
             <div class="collapse navbar-collapse" id="mainNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'text_labelling' %}">Data Labelling</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == 'data_preprocessing//' %}active{% endif %}" href="{% url 'data_preprocessing' %}">Data Preprocesing</a>
-                    </li>
-                </ul>
+               <ul class="navbar-nav ms-auto">
+    <li class="nav-item">
+        <a class="nav-link {% if request.path == '/text-labelling/' or request.path == '/' %}active{% endif %}"
+           href="{% url 'text_labelling' %}">Data Labelling</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link {% if request.path == '/data_preprocessing/' %}active{% endif %}"
+           href="{% url 'data_preprocessing' %}">Data Preprocessing</a>
+    </li>
+</ul>
             </div>
         </div>
     </nav>
+
     {% block main_content %}{% endblock %}
      <!-- Modern Footer -->
     <footer class="footer">
@@ -84,7 +91,32 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    {% block javascript %}<script src="{% static 'javascript.js' %}"></script>{% endblock %}
 
+    {% block javascript %}
+    <script src="{% static 'javascript.js' %}"></script>
+    <script>
+    document.querySelector('.navbar-toggler').addEventListener('click', function() {
+    this.classList.toggle('open');
+});
+
+// Enhanced click outside handling
+document.addEventListener('click', function(event) {
+    const navbar = document.querySelector('.navbar');
+    const navbarToggler = document.querySelector('.navbar-toggler');
+    const mainNav = document.querySelector('#mainNav');
+
+    if (!navbar.contains(event.target) && mainNav.classList.contains('show')) {
+        navbarToggler.classList.remove('open');
+        mainNav.classList.remove('show');
+    }
+});
+
+// Add smooth transition when menu closes
+document.querySelector('#mainNav').addEventListener('hide.bs.collapse', function() {
+    document.querySelector('.navbar-toggler').classList.remove('open');
+});
+
+    </script>
+    {% endblock %}
 </body>
 </html>
